package edu.austral.ingsis.clifford.commands;

public interface Command {
    String execute(String[] args);
}
